<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.liqingfeng.DailyNews.setting.SettingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/setting_normal"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/font_normal"
            android:textStyle="bold"/>

        <View
            style="@style/HorizontalLine"/>

        <com.liqingfeng.DailyNews.setting.widget.SettingItemView
            android:id="@+id/sv_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:settingContent="@string/setting_normal_image_content"
            app:settingTitle="@string/setting_normal_image_title"
            />

        <com.liqingfeng.DailyNews.setting.widget.SettingItemView
            android:id="@+id/sv_browser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:settingContent="@string/setting_normal_web_content"
            app:settingTitle="@string/setting_normal_web_title"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/setting_other"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/font_normal"
            android:textStyle="bold"/>

        <View
            style="@style/HorizontalLine"/>

        <com.liqingfeng.DailyNews.setting.widget.SettingItemView
            android:id="@+id/sv_clear_cache"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:isShowContent="false"
            app:isShowSwitch="false"
            app:settingTitle="@string/setting_other_clear"
            />

        <com.liqingfeng.DailyNews.setting.widget.SettingItemView
            android:id="@+id/sv_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:isShowContent="false"
            app:isShowSwitch="false"
            app:settingTitle="@string/setting_other_update"
            />

    </LinearLayout>

</ScrollView>
