<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:padding="5dp"
    android:focusable="true"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/iv_movie"
        android:layout_width="100dp"
        android:layout_height="120dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_movie_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Movie"
            android:textColor="@color/black"
            android:textSize="@dimen/font_normal" />

        <TextView
            android:id="@+id/tv_movie_director"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/movie_hot_movie_director"
            android:textSize="@dimen/font_small" />

        <TextView
            android:id="@+id/tv_movie_starring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/movie_hot_movie_starring"
            android:textSize="@dimen/font_small" />

        <TextView
            android:id="@+id/tv_movie_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/movie_hot_movie_type"
            android:textSize="@dimen/font_small" />

        <TextView
            android:id="@+id/tv_movie_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/movie_hot_movie_score"
            android:textSize="@dimen/font_small" />

    </LinearLayout>

</LinearLayout>